--- a/client/partials/welcome.html
+++ b/client/partials/welcome.html
@@ -1,3 +1,8 @@
+<script>
+    $(document).ready(function(){
+       $('.parallax').parallax();
+    });
+</script>
 <div ng-controller="welcomeController">
 	<div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
@@ -76,15 +81,5 @@
       </div>
 
     </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        
-      </div>
-    </div>
-    <div class="parallax"><img src="imgs/audio_bot.jpg"></div>
   </div>
 </div>
