modify website css

--- a/client/partials/welcome.html
+++ b/client/partials/welcome.html
@@ -11,9 +11,9 @@
         <h1 class="header center teal-text text-lighten-2">A. Rae Gaines</h1>
 				<h3 class="header center teal-text text-lighten-2">Full Stack Developer | Multimedia Producer</h3>
         <div class="row center">
-          <a href="#!" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Portfolio</a>
 					<a href="https://github.com/rudietuesdays/" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">GitHub</a>
 					<a href="https://www.linkedin.com/in/againes/" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">LinkedIn</a>
+					<a href="https://www.flickr.com/photos/manda_face" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Flickr</a>
         </div>
         <br><br>
 
@@ -29,30 +29,21 @@
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Chat Bot</h5>
-
-            <p class="light">A one page app where a user can chat with a robot about music and feelings. Built with MEAN.</p>
-          </div>
+          <h5 class="center"><a href="https://github.com/rudietuesdays/MEAN_chatbot">Chat Bot</a></h5>
+          <p class="light">A one page app where a user can chat with a robot about music and feelings. Built with MEAN.</p>
+					<h2 class="center projects"><img src="imgs/rude_bot_tiny.gif" alt=""></i></h2>
         </div>
 
         <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">Twitter Bot</h5>
-
-            <p class="light">For fans of #ska on Twitter, this bot will reply with classic phrases of the musical genre. Built in Ruby.</p>
-          </div>
+					<h5 class="center"><a href="https://github.com/rudietuesdays/twitter_skabot">Twitter Bot</a></h5>
+					<p class="light">For fans of #ska on Twitter, this bot will reply with classic phrases of the musical genre. Built in Ruby.</p>
+          <h2 class="center projects"><img src="imgs/ska_bot_small.png" alt=""></h2>
         </div>
 
         <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Song Generator</h5>
-
-            <p class="light">A work in progress, this app allows a user to select song content and styles. An editable song will be created for the user. Also includes a Beyonce song generator based on a user's mood. Built in Python.</p>
-          </div>
+          <h5 class="center"><a href="https://github.com/rudietuesdays/song_generator">Song Generator</a></h5>
+          <p class="light">A work in progress, this app allows a user to select song content and styles. An editable song will be created for the user. Also includes a Beyonce song generator based on a user's mood. Built in Python.</p>
+					<h2 class="center brown-text"><img src="imgs/feels_ocean.png" alt=""></h2>
         </div>
       </div>
 
@@ -76,7 +67,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>Contact</h4>
-          <p class="left-align light">Send me a message.</p>
+          <p class="left-align light">For questions, comments, project ideas, collaborations, or to connect and say hi, send me a message at <a href="mailto:me@raegaines.com">me [at] raegaines [dot] com</a>.</p>
         </div>
       </div>
 
